# quiver

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.es.md  README.md
.claude/: settings.local.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
backend/: MANIFEST.in  README.md  alembic.ini  pyproject.toml
backend/quiver/: __init__.py  app.py  cli.py  config.py  email.py  exceptions.py
backend/quiver/auth/: dependencies.py  jwt.py  router.py  schemas.py  service.py
backend/quiver/crud/: __init__.py  base.py  columns.py  filters.py  router_factory.py  schema_factory.py
backend/quiver/crud/fields/: __init__.py  base.py  date.py  misc.py  select.py  text.py
backend/quiver/dashboard/: __init__.py  base.py  registry.py  router.py
backend/quiver/dashboard/widgets/: __init__.py  chart.py  stat_card.py
backend/quiver/database/: __init__.py  session.py
backend/quiver/database/migrations/: env.py
backend/quiver/database/migrations/versions/: c7edcf4df9cd_create_auth_tables.py  e12f7d0c8c45_create_rbac_tables.py
backend/quiver/menu/: __init__.py  builder.py  registry.py  router.py  schemas.py
backend/quiver/models/: __init__.py  admin_user.py  associations.py  mixins.py  permission.py  role.py  token.py
backend/quiver/pages/: __init__.py  registry.py  router.py
backend/quiver/portal/: __init__.py  router.py  schemas.py
backend/quiver/rbac/: __init__.py  registry.py  router.py  schemas.py  service.py  sync.py
backend/quiver/users/: router.py  schemas.py  service.py
backend/tests/: test_crud_base.py  test_crud_router.py  test_dashboard.py  test_frontend.py  test_menu.py  test_pages.py  test_rbac.py  test_users.py
docs/: 01-instalacion.md  01-installation.md  02-inicio-rapido.md  02-quick-start.md  03-crud.md  04-dashboard.md  05-rbac.md  06-menu.md  07-custom-pages.md  07-paginas-custom.md  08-portal.md  09-frontend.md  10-ejemplos.md  10-examples.md  prompt design to claude code.txt  quiver-build-stories-v2.md  quiver-build-stories.md  quiver-design-spec.md  quiver-executive-summary.html  quiver-installation-guide.md  quiver-mvp-definition.md
docs/es/: 01-instalacion.md  02-inicio-rapido.md  03-crud.md  04-dashboard.md  05-rbac.md  06-menu.md  07-paginas-custom.md  08-portal.md  09-frontend.md  10-ejemplos.md
docs/quiver-handoff/quiver/: README.md
examples/almacen/: .env.example  README.es.md  README.md  main.py  models.py  permissions.py  seed.py
examples/almacen/cruds/: categoria_crud.py  material_crud.py  movimiento_crud.py  proveedor_crud.py
examples/almacen/pages/: alertas_stock.py
examples/almacen/widgets/: almacen_stats.py
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/src/: index.css  main.tsx  router.tsx
frontend/src/api/: auth.api.ts  client.ts  crud.api.ts  menu.api.ts  portal.api.ts  roles.api.ts  users.api.ts
frontend/src/guards/: RequireAuth.tsx  RequireRole.tsx
frontend/src/hooks/: useAuth.ts  useCrud.ts
frontend/src/i18n/: index.ts
frontend/src/layout/: AdminLayout.tsx  AuthLayout.tsx  Sidebar.tsx  Topbar.tsx  UserLayout.tsx
frontend/src/plugin/: DynamicRoutes.tsx  PageRegistry.tsx
frontend/src/store/: auth.store.ts  menu.store.ts  (+1 more)
(+72 files in other folders)
