[project]
name = "quiver"
version = "0.1.0"
description = "Quiver — admin panel framework for FastAPI"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "sqlmodel>=0.0.18",
    "alembic>=1.13.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    "python-dotenv>=1.0.0",
    "uvicorn[standard]>=0.29.0",
    "click>=8.1.0",
    "email-validator>=2.0.0",
]

[project.scripts]
quiver = "quiver.cli:cli"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["quiver*"]
